# pript

./: LICENSE  README.md  pyproject.toml
src/pript/: __init__.py  pript.py
tests/: test_cli.py  test_flag.py  test_receipt.py  test_unit.py
